feat: added POST /user/register endpoint
