# server/src/controllers/v1/user.controller.ts
@@ -1,3 +1,4 @@
+import { validate } from 'class-validator';
 import { Request, Response } from 'express';
 import { getRepository } from 'typeorm';
 import IRoute from 'types/route';
@@ -8,6 +9,34 @@ export class UserController {
 
   public all (request: Request, response: Response) {
     return this.userRepository.find();
+  }
+
+  public async register (request: Request, response: Response) {
+    const { email, name, password } = request.body;
+
+    let user = await this.userRepository.findOne({ email });
+    if (user) {
+      response.status(409).json({
+        message: 'Specified email address is already associated with an account.',
+      });
+      return;
+    }
+
+    user = new User();
+    user.name = name;
+    user.email = email;
+    user.password = await User.hashPassword(password);
+
+    const errors = await validate(user);
+    if (errors.length > 0) {
+      response.status(400).json({
+        errors,
+      });
+      return;
+    }
+
+    user = await this.userRepository.save(user);
+    response.json(user.displayUnit());
   }
 
   public async login (request: Request, response: Response) {
@@ -29,7 +58,7 @@ export class UserController {
       return;
     }
 
-    response.json(user);
+    response.json(user.displayUnit());
   }
 }
 
@@ -45,5 +74,11 @@ export const Routes: IRoute[] = [
     route: '/user/login',
     controller: UserController,
     action: 'login',
+  },
+  {
+    method: 'post',
+    route: '/user/register',
+    controller: UserController,
+    action: 'register',
   },
 ];
